tests/baselines/reference/es5-oldStyleOctalLiteralInEnums.errors.txt
es5-oldStyleOctalLiteralInEnums.ts(2,7): error TS1121: Octal literals are not allowed. Use the syntax '-0o1'.
es5-oldStyleOctalLiteralInEnums.ts(3,7): error TS1121: Octal literals are not allowed. Use the syntax '0o2'.


==== es5-oldStyleOctalLiteralInEnums.ts (2 errors) ====
    enum E {
      x = -01,
          ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o1'.
      y = 02,
          ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o2'.
    }